# Mint

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  GROUND_TRUTH.md  KANBAN.md  KIMI-K_MINT_DeepAudit_Report.md  KIMI-K_MINT_Handoff.md  KIMI-K_MINT_PersonalUse_Plan.md  MINTAUDIT25.06.2026.md  MINTBUILDERMESSAGE.md  MINT_DeepAudit_FinalReport.md  MINT_Desktop_App_Builder_Handoff.md  MINT_USER_MANUAL.md  MintJuneComplitionSprint.md  README.md  TODO.md  USER_MANUAL.md  comfyui.md  components.json  docker-compose.yml  eslint.config.js  index.html  install.bat  install.ps1  main.tsx  opencode.json  package-lock.json  package.json  railway.json  start-mint.bat  stop-mint.bat  styles.css  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
backend/: .env.example  .gitignore  Dockerfile  HANDOFF_BACKEND.md  bundle.mjs  env.template  package.json  railway.toml  tsconfig.build.json  tsconfig.json
docs/: AI_PROVIDERS.md  API_CONTRACT.md  BUNDLE.md  GETTING_STARTED.md  NODE_MAP.md  PLAN.md  REPORT.md  REQUIREMENTS.md  TASK_LOG.md  TEST_COVERAGE.md  cline-mint-deepaudit-15.06.2026.md  cline-mint-proposed-first-stage-15.06.2026.md
entities/: content_projects.json  generated_posts.json  research_reports.json
frontend/: .env.desktop  .env.example  Dockerfile
installer/: MINT_Setup.iss  MINT_Setup_Lite.iss  MINT_Setup_Personal.iss  download-comfyui.bat  download-ollama.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+120 files in other folders)
